# fuzzware-emulator

./: .gitignore  .gitmodules  README.md  README_config.yml  afl.patch  get_afl.sh  requirements.txt  setup.sh
harness/: harness.py  setup.py
harness/fuzzware_harness/: __init__.py  exit.py  gdbserver.py  globs.py  harness.py  interrupt_triggers.py  native.py  sparkle.py  timer.py  util.py
harness/fuzzware_harness/mmio_models/: __init__.py  bitextract.py  constant.py  linear.py  passthrough.py  set.py  wrapper.py
harness/fuzzware_harness/native/: Makefile  interrupt_triggers.c  interrupt_triggers.h  khash.h  native_hooks.c  native_hooks.h  native_tracing.c  native_tracing.h  state_snapshotting.c  state_snapshotting.h  timer.c  timer.h  uc_snapshot.c  uc_snapshot.h  unicorn.h  util.c  util.h  wrapper.h
harness/fuzzware_harness/native/core_peripherals/: cortexm_nvic.c  cortexm_nvic.h  cortexm_systick.c  cortexm_systick.h
harness/fuzzware_harness/tracing/: bintrace.capnp  bintrace.py  serialization.py  snapshot.py  trace_bbs.py  trace_ids.py  trace_mem.py
harness/fuzzware_harness/user_hooks/: __init__.py  debug.py  fuzz.py
harness/fuzzware_harness/user_hooks/generic/: __init__.py  malloc.py  stdio.py
harness/fuzzware_harness/user_hooks/zephyr/: zephyr_kernel.py  zephyr_netstack_utils.py
icicle/: Cargo.toml  build.rs  pyproject.toml
icicle/src/: arm.rs  fuzzware.rs  lib.rs  unicorn_api.rs
unicorn/: build_unicorn.sh
