[package]
name = "icicle"
version = "0.1.0"
edition = "2021"

[lib]
name = "icicle"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
icicle-vm = { path = "../../../icicle-emu/icicle-vm" }
icicle-fuzzing = { path = "../../../icicle-emu/icicle-fuzzing" }
pcode = { path = "../../../icicle-emu/sleigh/pcode" }
tracing = { version = "0.1.36", default-features = false, features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt", "env-filter", "ansi"] }
once_cell = "1.13.0"
bytemuck = "1.11.0"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.60.1"

[profile.release]
debug = 1
